...
                colors =
                    TopAppBarDefaults.topAppBarColors(
                        containerColor = MaterialTheme.colorScheme.background,
                    ),
            )
        },
        modifier = modifier.testTag("now_playing_screen"),
    ) { paddingValues ->
        Column(
            modifier =
                Modifier
                    .fillMaxSize()
                    .padding(paddingValues)
...

                FilledIconButton(
                    onClick = onPlayPauseClick,
                    modifier =
                        Modifier
                            .size(Dimens.nowPlayingPlayButtonSize)
                            .testTag("play_pause_button"),
                    colors =
                        IconButtonDefaults.filledIconButtonColors(
                            containerColor = MaterialTheme.colorScheme.primary,
                        ),
                ) {
                    Icon(
...
