...
    onAddToPlaylist: (TrackInfo) -> Unit,
) {
    LazyColumn(
        modifier =
            Modifier
                .fillMaxSize()
                .testTag("track_list"),
        contentPadding = PaddingValues(vertical = Dimens.listVerticalPadding),
    ) {
        items(
            items = tracks,
            key = { it.uri.toString() },
        ) { track ->
...
